deploy_to_ocp/webapp-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: mcms-webapp-svc
  label: mcms-webapp
spec:
  selector:
    app: mcms-webapp
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: NodePort
